# NavigationSystem

./: .gitignore  CMakeLists.txt  main.cpp
core/: CMakeLists.txt  dijkstra.cpp  dijkstra.h  grafo.cpp  grafo.h  grafo_BACKUP_768.cpp  grafo_LOCAL_768.cpp  grafo_REMOTE_768.cpp  maploader.cpp  maploader.h  trie.cpp  trie.h
ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapa.qml  resources.qrc
